tests/NormalTests/paczka1/fuzzy1/66708759.err
Error in line 4: 4nxvMN S985 39,3
Error in line 6: S262 S262 71,52
Error in line 2: S262 S985 60,2
Error in line 8: Q2RTz S985 62,3
Error in line 10: S262 S262 306,9
Error in line 21: S262 S985 95,6
Error in line 22: S262 S270 64,2
Error in line 31: Gb8Cm9QSy1g S985 77,0
